--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ __pycache__/localAl.cpython-311.pyc
 __pycache__/globalAl.cpython-311.pyc
 __pycache__/fasta.cpython-311.pyc
 __pycache__/blosum62.cpython-311.pyc
+__pycache__/localAl.cpython-39.pyc
+__pycache__/globalAl.cpython-39.pyc
+__pycache__/fasta.cpython-39.pyc
+__pycache__/blosum62.cpython-39.pyc
