--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ __pycache__/globalAl.cpython-39.pyc
 __pycache__/fasta.cpython-39.pyc
 __pycache__/blosum62.cpython-39.pyc
 __pycache__/bcm.cpython-39.pyc
+__pycache__/bcm.cpython-311.pyc
