--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ __pycache__/fasta.cpython-39.pyc
 __pycache__/blosum62.cpython-39.pyc
 __pycache__/bcm.cpython-39.pyc
 __pycache__/bcm.cpython-311.pyc
+__pycache__/msa.cpython-311.pyc
