--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ __pycache__/blosum62.cpython-39.pyc
 __pycache__/bcm.cpython-39.pyc
 __pycache__/bcm.cpython-311.pyc
 __pycache__/msa.cpython-311.pyc
+__pycache__/msa.cpython-311.pyc
