--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ __pycache__/bcm.cpython-39.pyc
 __pycache__/bcm.cpython-311.pyc
 __pycache__/msa.cpython-311.pyc
 __pycache__/msa.cpython-311.pyc
+__pycache__/clb.cpython-311.pyc
