--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ __pycache__/bcm.cpython-311.pyc
 __pycache__/msa.cpython-311.pyc
 __pycache__/msa.cpython-311.pyc
 __pycache__/clb.cpython-311.pyc
+__pycache__/msa.cpython-39.pyc
+__pycache__/clb.cpython-39.pyc
