--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ __pycache__/msa.cpython-311.pyc
 __pycache__/clb.cpython-311.pyc
 __pycache__/msa.cpython-39.pyc
 __pycache__/clb.cpython-39.pyc
+.DS_Store
